# NPUcore-IMPACT

./: .gitignore  CTree.md  Makefile  README.md
dependency/ext4/lwext4-rs/: Cargo.toml
dependency/ext4/lwext4-rs/examples/: mkfs.rs  tests.rs  usage.rs
dependency/ext4/lwext4-rs/src/: block.rs  debug.rs  dir.rs  directory_node.rs  error.rs  file.rs  fs.rs  lib.rs  mkfs.rs  standard.rs  types.rs
dependency/ext4/lwext4-rs/tests/: ext.rs
dependency/isomorphic/: Cargo.toml
dependency/isomorphic/src/: lib.rs  logging.rs
dependency/isomorphic/src/block/: ahci.rs
os/: Cargo.toml  Makefile  buildext4.sh  buildfs.sh  la_fat  la_fat.exp  la_gdbserver  run_script
os/.cargo/: config
os/src/: console.rs  lang_items.rs  linker.in.ld  main.rs  timer.rs
os/src/arch/: mod.rs
os/src/arch/la64/: config.rs  entry.asm  kern_stack.rs  la_libc_import.rs  laflex.rs  load_img.S  mod.rs  sbi.rs  switch.S  switch.rs  syscall_id.rs  time.rs  tlb.rs
os/src/arch/la64/board/: 2k1000.rs  (+1 more)
os/src/drivers/block/: block_dev.rs  mem_blk.rs  mod.rs  sata_blk.rs  virtio_blk.rs
os/src/drivers/serial/: ns16550a.rs
os/src/fs/: cache.rs  directory_tree.rs  ext4_file.rs  file_trait.rs  filesystem.rs  inode.rs  layout.rs  mod.rs  poll.rs  swap.rs  vfs.rs
os/src/fs/dev/: hwclock.rs  mod.rs  null.rs  pipe.rs  socket.rs  tty.rs  zero.rs
os/src/fs/fat32/: efs.rs  inode.rs  layout.rs  mod.rs  vfs.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: errno.rs  fs.rs  mod.rs  process.rs  socket.rs
os/src/task/: context.rs  elf.rs  manager.rs  mod.rs  pid.rs  processor.rs  signal.rs  task.rs
user/: Cargo.toml  Makefile
user/.cargo/: config
user/busybox_lua_testsuites/loongarch64/: busybox  busybox_cmd.txt  busybox_dbg  busybox_testcode.sh  lmbench_all  lmbench_dbg  lmbench_testcode.sh  lua  lua_dbg  my_test.sh
user/busybox_lua_testsuites/loongarch64/root/: .bashrc
user/loongarch64/: brk  chdir  close  dup  execve  exit  fork  getcwd  getpid  gettimeofday  mount  munmap  open  pipe  read  run-all.sh  sleep  test_echo  times  unlink  wait  waitpid  write  yield
user/src/: console.rs  la_libc_import.rs  lib.rs  linker-2k500.ld  linker.ld  syscall.S  syscall.rs  usr_call.rs
user/testcases/etc/: nanorc
user/testcases/final/: busybox  hello  testcode.sh
user/testcases/final/unixbench/: arithoh  dhry2  dhry2reg  double  float  hanoi  int  long  pipe  short
user/testcases/pre/: clone  dup2  fstat  getdents  getppid  mkdir_  mmap  openat  run-all.sh  statx  test_close.txt  test_mmap.txt  umount  uname
user/user_C_program/user/: CMakeLists.txt  Makefile
(+128 files in other folders)
