[package]
name = "os"
version = "0.1.0"
authors = ["Fediory Feng <yixu-nwpu@mail.nwpu.edu.cn>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8"
spin = "0.7"
bitflags = "1.3"
xmas-elf = "0.7.0"
embedded-hal = "=1.0.0-alpha.7"
nb = "1.0"
log = "0.4"
num_enum = { version = "0.5", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }
lz4_flex = { version = "0.9.0", default-features = false }
bit_field = "0.10.1"
[target.'cfg(target_arch = "loongarch64")'.dependencies]
rlibc = "1.0.0"
volatile = "0.4.6"
embedded-io = "0.6.1"
pci = { path = "../dependency/pci" }
isomorphic_drivers = { path = "../dependency/isomorphic" }
# lwext4-rs = { path = "../dependency/ext4/lwext4-rs" }

[features]
zero_init = []
swap = []
zram = []
oom_handler = ["swap", "zram"]
ext4 = []
log_off = ["log/max_level_off"]

# LoongArch Boards:
la64 = []
board_2k1000 = ["oom_handler", "la64"]
board_laqemu = ["oom_handler", "la64"]
# END of LoongArch Boards.

default = ["board_laqemu"]


[profile.dev]
opt-level = 1
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
[profile.release]
lto = true
