[package]
name = "user_lib"
version = "0.1.0"
authors = ["Fediory Feng<yixu-nwpu@mail.nwpu.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
[target.'cfg(target_arch = "loongarch64")'.dependencies]
rlibc = "1.0.0"

[profile.dev]
debug = true