[package]
name = "isomorphic_drivers"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

[dependencies]
spin = "0.9"
bitflags = "1.3"
bit_field = "0.10"
volatile = "0.3"
log = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.8"

[features]
