[package]
name = "lwext4-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lwext4-sys = { path = "../lwext4-sys" }
bitflags = "1.3.2"
embedded-io = "0.6"
log = "0"


[dev-dependencies]
env_logger = "0"

[features]
default = [ "std" ]
std = ["embedded-io/std"]